[package]
name = "colladraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid"}
piet-gpu = {git = "https://github.com/linebender/piet-gpu"}
automerge = "0.0.2"