[package]
name = "pxtogether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
futures = "0.3.21"
libp2p = { version = "0.41", features = ["tcp-tokio", "mdns"] }
#druid = { git = "https://github.com/linebender/druid"}
iced = { version = "0.4", features = ["pure", "canvas", "tokio"]}
rfd = { version ="0.8.2", features = ["file-handle-inner"] }
yrs = "0.6.2"
lib0 = "0.6.2"
automerge = { git = "https://github.com/automerge/automerge-rs" }